MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/Genesys_CC_integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Genesys CC integration</label>
</CustomObject>