MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Available</label>
    <length>50</length>
    <type>Text</type>
</CustomField>