MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Available_Off_Queue__c.field-meta.xml
<CustomField>
    <fullName>Available_Off_Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Available Off Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>