MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Break__c.field-meta.xml
<CustomField>
    <fullName>Break__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Break</label>
    <length>50</length>
    <type>Text</type>
</CustomField>