MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Busy_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Busy_Lunch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Busy Lunch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>