MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lunch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>