MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>