MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Offline__c.field-meta.xml
<CustomField>
    <fullName>Offline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>