MODON MRE BPDEV/force-app/main/default/objects/Genesys_CC_integration__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training</label>
    <length>50</length>
    <type>Text</type>
</CustomField>